--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -12,8 +12,9 @@
 name: Upload Python package to PyPI
 
 on:
-  release:
-    types: [published]
+  push:
+    tags:
+      - "v*.*.*"
 
 permissions:
   contents: read
